# NextGlobeGen

./: .gitignore  LICENSE  README.md  package.json  tsup.config.ts
.github/: FUNDING.yml
.github/workflows/: audit-deps.yml  code-quality-docs.yml  code-quality-key-extractor.yml  code-quality-monorepo.yml  code-quality-package.yml  code-quality-playground.yml  deploy.yml  publish.yml
docs/: .gitkeep  docusaurus.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json
docs/docs/: common-pitfalls.mdx  comparison-with-next-intl.mdx  getting-started.md  getting-started.mdx  introduction.md  introduction.mdx  messages.mdx  routing.mdx  testing.mdx
docs/docs/api-reference/: _category_.yaml  cli.mdx  components.mdx  configuration.mdx  functions.mdx  hooks.mdx  middleware.mdx  plugin.mdx  routing.mdx
docs/docs/usage-guide/: _category_.yaml
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/src/theme/: prism-include-languages.js  prism-treeview.css
examples/monorepo/: .gitignore  .prettierignore  .prettierrc.mjs  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/playground/: .gitkeep  .prettierignore  README.md  eslint.config.mjs  i18n.config.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.mts
examples/playground/src/: mdx-components.tsx  middleware.ts  proxy.ts  test-utils.tsx
examples/playground/tests/: example.spec.ts
key-extractor/: Cargo.toml  README.md  package.json  rust-toolchain.toml
key-extractor/src/: lib.rs  tests.rs
package/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.mts
package/src/__mocks__/: getExpectedOriginRoutes.ts  i18n.config.ts
package/src/cli/: types.ts
package/src/config/: config.ts  index.ts  loadMessageEntries.ts  types.ts  utils.ts  writeMessageEntries.ts
package/src/middleware/: index.ts  middleware.test.ts  middleware.ts
package/src/plugin/: detectPackageManagerRunner.ts  index.ts  plugin.test.ts  plugin.ts
package/src/proxy/: proxy.test.ts  proxy.ts
package/src/types/: messages.ts  schema.ts
src/middleware/: middleware.ts
src/utils/: routes.ts
swc-plugin-key-extractor/: Cargo.toml  README.md  package.json
swc-plugin-key-extractor/src/: lib.rs  tests.rs
(+171 files in other folders)
