[package]
name = "key-extractor"
version = "1.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustc-hash = "2.0.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_with = "3.0.0"
swc_common = "23.0.0"
swc_core = { version = "68.0.0", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "25.0.0"
swc_ecma_visit = "25.0.0"
swc_plugin_macro = "1.0.0"

[dev-dependencies]
swc_core = { version = "68.0.0", features = ["ecma_parser"] }

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
